--- a/cards.css
+++ b/cards.css
@@ -15,3 +15,21 @@
 #bg-color-picker {
 	margin: 10px;
 }
+body {
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+}
+
+.container {
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.card {
+	width: 100%;
+	max-width: 400px;
+}
